@@ -7,6 +7,7 @@ Version 1.4.7+svn:
  * multiplayer:
    * server:
      * create the fifo group accessible (instead of only user accessible)
+     * fixed bug #13099: MP lobby player list becomes inaccurate over time
  * miscellaneous and bug fixes:
    * AmigaOS4: Minimum stack cookie to prevent stack overflow (patch #1107)
    * Additional screenmodes for when SDL can't guess them (patch #1108)
